# manylogue

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  smoke.yml
.impeccable/: design.json
src/manylogue/: __init__.py  app.py
src/manylogue/adapters/: __init__.py  base_adapter.py  claude_adapter.py  codex_adapter.py  openai_adapter.py
src/manylogue/agents/: __init__.py  agent.py  agent_base.py  agent_definition.py  agent_participant.py  missing_agent.py  role.py  turn_result.py
src/manylogue/chat/: __init__.py  chat_meta_storage.py  chat_mode.py  chat_participants_storage.py  chat_room.py
src/manylogue/config/: __init__.py  constants.py
src/manylogue/defaults/agents/: Claude.toml  Claude_Fable.toml  Codex.toml  Codex_55.toml  Codex_Luna.toml  Codex_Sol.toml  Codex_Terra.toml
src/manylogue/messages/: __init__.py  adapter_response.py  agent_stream_event.py  message.py  messages_storage.py
src/manylogue/static/: app.css  highlight.css
src/manylogue/templates/: _chats-list.html  _message.html  base.html  chat.html  index.html
src/manylogue/util/: __init__.py  identifiers.py  markdown_render.py  template_render.py  validators.py
tests/: conftest.py  test_agent.py  test_app_routes.py  test_chat_meta.py  test_chat_participants_storage.py  test_chat_room.py  test_codex_adapter.py  test_config.py  test_identifiers.py  test_messages_storage.py  test_validators.py  test_wheel_contents.py
